[package]
name = "rmbrs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4" 
home = "0.5.3"
exitcode = "1.1.2"

[build-dependencies]
clap = { version = "3.0.0-rc.8", features = ["derive"] }
clap_complete = "3.1.1"
